// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav component matches Nav 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav center 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  -webkit-box-pack: center !important;
  -webkit-justify-content: center !important;
  -ms-flex-pack: center !important;
  justify-content: center !important;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav end 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  -webkit-box-pack: end !important;
  -webkit-justify-content: flex-end !important;
  -ms-flex-pack: end !important;
  justify-content: flex-end !important;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav fill 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  text-align: center;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav justified 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav start 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  -webkit-box-pack: start !important;
  -webkit-justify-content: flex-start !important;
  -ms-flex-pack: start !important;
  justify-content: flex-start !important;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav tabs 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  border-bottom: 1px solid #cccecf;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 > a {
  margin-bottom: -1px;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;

exports[`Nav component matches Nav vertical 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  -webkit-flex-direction: column !important;
  -ms-flex-direction: column !important;
  flex-direction: column !important;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<nav
  class="sc-fznKkj c0"
/>
`;
